feat/chatbot modify